--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,9 +23,10 @@ dev = [
     "mypy>=1.0.0",
 ]
 
-[tool.black]
-line-length = 100
-target-version = ['py310']
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["cvtrainer*"]
+exclude = ["apps*", "data*", "configs*", "tests*", "docs*"]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
