--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,11 +14,7 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         python-version: ['3.10']
-        torch-version: ['2.0.0', '2.1.0']
-        include:
-          - os: ubuntu-latest
-            python-version: '3.11'
-            torch-version: 'latest'
+        torch-version: ['2.5.0']
 
     steps:
       - uses: actions/checkout@v4
